@@ -198,6 +198,7 @@ void ERR_load_DH_strings(void);
 #define DH_F_DH_NEW_METHOD				 105
 
 /* Reason codes. */
+#define DH_R_BAD_GENERATOR				 101
 #define DH_R_NO_PRIVATE_VALUE				 100
 
 #ifdef  __cplusplus
